# cpr-langgraph-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
doc/: mock-server-openapi.json
src/cpr_langgraph_agent/: agent_prompt.py  app.py  crm_client.py  data_agent.py  models.py  output_models.py  react_agent.py  search_agent.py  search_agent_prompts.py  state_models.py  supervisor_agent.py  supervisor_agent_prompts.py
src/mock_server/: app.py  models.py
